add light effect

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>AnimatedLoader</title>
+    <link rel="stylesheet" type="text/css" href="./dist/style.css">
 </head>
 <body>
     <div id="wrap"></div>
